syntax = "proto3";
package gRPCDemo;
service rpcSite {
  rpc GetSites (SitesRequest) returns (SitesReply) {}
  rpc GetSiteDetail (SitesRequest) returns (DbDetail) {}
}

message SitesRequest {
  string name = 1;
}

message SitesReply {
  string message = 1;
  repeated WebSite ListWebSite = 2;
}

message DbDetail {
  string message = 1;
  string Address = 2;
  string Name = 3;
  string User = 4;
  string Pwd = 5;
}

message WebSite {
     int32 ID = 1;
     string Name = 2;
	 string PhysicalPath = 3;
	 string Address = 4;
	 string BindingInformation = 5;
	 int32 Port = 6;
}